# supergitignore

./: Cargo.toml  LICENSE  README.md
src/: gitignore.txt  main.rs
