[package]
name = "supergitignore"
authors = ["Shalev Ari"]
version = "1.3.0"
edition = "2021"
description = "Quickly generate a massive gitignore file!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"