[package]
name = "supergitignore"
authors = ["Shalev Ari"]
version = "2.1.1"
edition = "2021"
description = "Quickly generate a massive gitignore file!"
repository = "https://github.com/ShalevAri/supergitignore"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
